# ASSERT

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  README.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  _tmp_build_demo_aggregate.py  _tmp_build_demo_smoke.py  _tmp_compare_n30_n100.py  _tmp_oai_smoke.py  copilot-context.md  copilot-session-7bd9ebe1-87c6-4cb9-9b92-88512f2aa196.md  eval_config.yaml  pr-body.txt  pr181_files.json  pyproject.toml
.azure-pipelines/: component-governance.yml
.cursor/rules/: assert.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODEOWNERS-VACATIONS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: comms.md  designer.md  dev-maintainer.md  feedback.md  pm.md
.github/prompts/: run-assert-eval.prompt.md
.github/scripts/: escalate_reviews.py
.github/skills/: audit-pr.md  competitive-scan.md  draft-reply.md  feedback-synthesis.md  file-feedback-issue.md  strategy-synthesis.md  ux-audit.md
.github/workflows/: build-viewer.yml  build.yml  deploy-pages.yml  eng.yml  pages.yml  publish-pypi.yml  regression.yml  review-escalation.yml  science.yml  scorecard.yml  stale.yml  tau2-correlation.yml
assert_ai/: __init__.py  auto_trace.py  cli.py  config.py  display.py  local_agent_config.py  local_agents.py  local_sandbox.py  local_snapshots.py  local_specs.py  logging_config.py  results.py  runner.py  tracing.py  viewer_read_model.py
assert_ai/_examples/: __init__.py  _tools.py
assert_ai/analysis/: README.md  inference_metrics.py  stratification_metrics.py  suite_analysis.py  test_case_labeling.py  test_set_metrics.py
assert_ai/core/: artifact_cache.py  async_utils.py  azure_auth.py  collector.py  config_model.py  io.py  judge.py  judge_citations.py  judge_normalization.py  model_client.py  otel.py  otel_session.py  runtime_safety.py  security.py  session.py  tool_backend.py  tools.py  transcript.py
assert_ai/init/: __init__.py  _command.py  _context.py  _design_agent.py  _llm.py  _validate.py
assert_ai/integrations/: __init__.py
assert_ai/internal_pipeline_prompts/: inference_tester_system.md  init_system.md  judge_system.md  systematize_system.md  (+3 more)
assert_eval/: __init__.py  cli.py  config.py  display.py  logging_config.py  results.py  runner.py  viewer_read_model.py
concierge-private-banking-rm-agent/: .env.example  README.md  eval_config.yaml  eval_config_100.yaml  eval_config_demo2.yaml  pyproject.toml
concierge-private-banking-rm-agent/data/: private_banking.db  seed_private_banking.py
concierge-private-banking-rm-agent/policies/: guardrails.yaml  private_banking_rm_policy.md
concierge-private-banking-rm-agent/src/rm_agent/: __init__.py  agent.py  batch_unguarded.py  db.py  demo_guarded.py  eval_runner.py  guarded_runtime.py  guardrails_loader.py  mcp_server.py  models.py  policies.py  probe_100.py  scenarios.py  seed.py  tools.py
concierge-private-banking-rm-agent/tests/: test_eval_scenarios.py  test_guardrails_yaml.py  test_policy_guards.py
docs/: README.md  ai-agent-onboarding.md  case-study-incident-triage-joint.md  concepts.md  getting-started.md  glossary.md  quickstart.md  reading-results.md  security-and-privacy.md  specs.md  status-and-roadmap.md  travel-planner-agent-flow.md  writing-eval-specs.md
examples/: README.md
internal-pipeline-prompts/: README.md  inference_toolsim_user.md  init_system.md  test_set_generation_guidance.md
p2m/: cli.py  config.py  display.py  logging_config.py  results.py  runner.py  viewer_read_model.py
p2m_policy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: README.md  init_system.md  judge_system.md  policy_system.md  rollout_auditor_system.md  rollout_toolsim_user.md  seeds_design.md  seeds_direct_single.md  seeds_generation_guidance.md  seeds_scenario_single.md  systematization_convert_single.md  systematization_single.md  taxonomy_system.md  test_set_design.md  test_set_direct_single.md  test_set_generation_guidance.md  test_set_scenario_single.md  test_set_stratification.md  validation_criteria.md
scripts/: README.md  __init__.py  arize_judge_comparison.py  auditor_pairwise_eval.py  benchmark.py  compute_canonical_metrics.py  export_suite_results.py  fix_taxonomy_mapping.py  judge_stability_experiment.py  launch_deepseek_after_gpt5.ps1  make_compare_tabs_fixture.py  migrate_artifacts_to_pr23_vocab.py  populate_bank_manager_results.py  probe_model_names.py  regression_decision.py  regression_metrics.py  regression_stats.py  regression_test.py  render_trade_off.py  scenario_failure_prediction.py  smoke_cell.py  smoke_classify.py  t4_canonical_metrics.py  tester_pairwise_eval.py  turn_checkpoint_judge.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
tests/: __init__.py  conftest.py  helpers.py  node_runner.py  test_acs_cli.py  test_acs_eval_config.py  test_acs_findings.py  test_acs_generate.py  test_acs_guard.py  test_acs_language_model.py  test_acs_prompt_builder.py  test_acs_validate.py  test_agent_shield_adapter.py  test_analysis.py  test_artifact_cache.py  test_auditor_pairwise_eval.py  test_auditor_target_loop.py  test_auto_trace.py  test_azure_auth.py  test_azure_auth_dotenv.py  test_benchmark_summary.py  test_callable_session_path_resolution.py  test_cli.py  test_concurrency_config.py  test_design_stage.py  test_display_labels.py  test_endpoint_session.py  test_escalate_reviews.py  test_exception_handling.py  test_framework_agnostic.py  test_hosted_trace_registration.py  test_import_smoke.py  test_incident_triage_smoke.py  test_inference_stage.py  test_init_command.py  test_init_context.py  test_init_design_agent.py  test_init_emit.py  test_init_llm.py  test_init_parse_action.py  (+71 more)
viewer/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
website/: .eslintrc.json  _deploy.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+852 files in other folders)
