[project]
name = "p2m-policy"
version = "0.1.0"
description = "YAML-driven safety evaluation pipeline with LiteLLM-backed stages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "autogen-agentchat>=0.7.5",
  "autogen-ext>=0.7.5",
  "click>=8.0",
  "crewai[azure-ai-inference]>=1.6.1",
  "dspy>=2.6.13",
  "haystack-ai>=2.28.0",
  "instructor>=1.15.1",
  "langchain-mcp-adapters>=0.2.2",
  "litellm>=1.79.1",
  "llama-index>=0.14.21",
  "llama-index-core>=0.14.21",
  "llama-index-llms-openai>=0.7.5",
  "openai-agents>=0.14.5",
  "pydantic>=2.0",
  "pydantic-ai>=0.8.1",
  "python-dotenv>=1.2.1",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9.0",
  "rich>=13.7.0",
  "smolagents>=1.22.0",
]

[project.optional-dependencies]
otel = [
  "arize-phoenix-otel>=0.15.0",
  "openinference-instrumentation-langchain>=0.1.62",
  "opentelemetry-api>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
]
langgraph = [
  "langchain-core>=1.3.0",
  "langchain-openai>=1.1.14",
  "langgraph>=1.1.8",
]
analysis = [
  "matplotlib>=3.8.0",
  "numpy>=2.0.0",
  "openai>=1.30.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "seaborn>=0.13.0",
  "sentence-transformers>=3.0.0",
]
all = [
  "p2m-policy[otel,langgraph,analysis]",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.scripts]
p2m = "p2m.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "p2m-policy[otel,langgraph]",
]

[tool.setuptools.packages.find]
include = ["p2m*", "examples*"]
