[project]
name = "p2m-policy"
version = "0.1.0"
description = "YAML-driven safety evaluation pipeline with LiteLLM-backed stages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.0",
  "litellm>=1.79.1",
  "matplotlib>=3.10.8",
  "pydantic>=2.0",
  "python-dotenv>=1.2.2",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
otel = [
  "arize-phoenix>=15.0.0",
  "arize-phoenix-otel>=0.15.0",
  "openinference-instrumentation-langchain>=0.1.62",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
]
langgraph = [
  "langchain-core>=1.3.0",
  "langchain-openai>=1.1.14",
  "langgraph>=1.1.8",
]
analysis = [
  "markdown-it-py>=3.0.0",
  "numpy>=2.0.0",
  "openai>=1.30.0",
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "requests>=2.33.0",
  "scikit-learn>=1.5.0",
  "seaborn>=0.13.0",
  "sentence-transformers>=3.0.0",
]
regression = [
  "scipy>=1.11.0",
  "numpy>=2.0.0",
]
examples = [
  "autogen-agentchat>=0.7.5",
  "autogen-ext>=0.7.5",
  "crewai[azure-ai-inference]>=1.6.1",
  "dspy>=2.6.13",
  "haystack-ai>=2.28.0",
  "instructor>=1.15.1",
  "langchain-mcp-adapters>=0.2.2",
  "llama-index>=0.14.21",
  "llama-index-core>=0.14.21",
  "llama-index-llms-openai>=0.7.5",
  "openai-agents>=0.14.5",
  "pydantic-ai>=0.8.1",
  "smolagents>=1.22.0",
  # Framework-specific OpenInference instrumentors used by the
  # examples/phoenix_auto_trace/* demos. `phoenix.otel.register(auto_instrument=True)`
  # auto-loads every installed `openinference-instrumentation-*` package and a
  # single version mismatch crashes the whole call, so the upper bounds below
  # match the framework versions pinned above. The crewai instrumentor pin is
  # held at 0.1.17 because every release >=0.1.18 requires `crewai>=1.9.0`,
  # which would conflict with our `crewai[azure-ai-inference]>=1.6.1` pin and
  # silently disable crewai instrumentation. Bump these together when bumping
  # crewai (-> instrumentor 1.x) or dspy (>= 2.7).
  "openinference-instrumentation-openai>=0.1.45",
  "openinference-instrumentation-litellm>=0.1.30",
  "openinference-instrumentation-dspy>=0.1.19,<0.1.20",
  "openinference-instrumentation-crewai>=0.1.17,<0.1.18",
]
all = [
  "p2m-policy[otel,langgraph,analysis,examples,regression]",
]
dev = [
  "pytest>=9.0.3",
  "pytest-timeout>=2.2.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.scripts]
p2m = "p2m.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "p2m-policy[otel,langgraph,examples]",
]

[tool.setuptools.packages.find]
include = ["p2m*", "examples*"]
