[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge-private-banking-rm-agent"
version = "0.1.0"
description = "Mock regulated private banking RM AI assistant demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]
api = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
mcp = [
  "mcp>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
